2009-12-09
	* Replaced GHashTable with tr1::unordered_map in tcp_portmon.
	This means portmon no longer depends on glib.

2009-12-01
	* Reenable top objects for all target OS's

2009-11-24
	* Added support for max_text_width

2009-11-20
	* Allow for mpd connections to use IPv6

2009-11-19
	* Added support for $pid_read and $pid_write

2009-11-17
	* Added support for $format_time

2009-11-16
	* Added support for $pid_threads, $pid_thread_list, $pid_nice,
	$pid_priority, $pid_time_usermode, $pid_time_kernelmode and $pid_time
	* Added IPv6 support to $tcp_portmon

2009-11-15
	* Added support for $pid_parent, $pid_uid, $pid_euid, $pid_suid,
	$pid_fsuid, $pid_gid, $pid_egid, $pid_sgid and $pid_fsgid
	* Added support for $uid_name and $gid_name
	* Renamed $running_processes to $running_threads
	* Added real $running_processes
	* Added support for $pid_vmpeak, $pid_vmsize, $pid_vmlck, $pid_vmhwm,
	$pid_vmrss, $pid_vmdata, $pid_vmstk, $pid_vmexe, $pid_vmlib, $pid_vmpte

2009-11-14
	* Added support for $pid_state and $pid_state_short
	* Added support for $cmdline_to_pid
	* Make it possible to use other vars as arguments for the $pid_'s

2009-11-13
	* Add $conky_user_time (sf.net #2830919)
	* Drop adt746x objects
	* Added support for $pid_chroot
	* Added middle_middle alignment support

2009-11-12
	* Added support for $pid_environ_list, $pid_exe, $pid_openfiles,
	$pid_stdin, $pid_stdout and $pid_stderr

2009-11-11
	* Added support for $pid_cmdline, $pid_cwd, $pid_environ

2009-11-10
	* Fix $if_mpd_playing and $mpd_percent when you stop playing a song,
	thanks Sakari Matikka

2009-11-09
	* Fix $scroll only scrolls once

2009-11-08
	* Fix segfaults and memleaks in curl
	* Fix building with metar but without xoap

2009-11-07
	* Added support for $threads on Linux
	* Fixed bug in $processes on Linux
	* Fixed building with --disable-x11, --disable-xft, --disable-lua,
	--disable-ncurses and --disable-iostats
	* Added ncurses to the "-v" output when necessary

2009-10-25