@@ -177,6 +177,7 @@ void update_meminfo(void)
 
 	info.memmax = total_pages * (pagesize >> 10);
 	info.mem = (total_pages - free_pages - inactive_pages) * (pagesize >> 10);
+    info.memwithbuffers = info.mem;
 	info.memeasyfree = info.memfree = info.memmax - info.mem;
 
 	if ((swapmode(&swap_avail, &swap_free)) >= 0) {
